force-app/main/default/objects/ShipmentItem/ShipmentItem.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>