force-app/main/default/objects/ShipmentItem/fields/isFPD__c.field-meta.xml
<CustomField>
    <fullName>isFPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFPD</label>
    <type>Checkbox</type>
</CustomField>