force-app/main/default/objects/ShipmentItem/fields/isTTVisible__c.field-meta.xml
<CustomField>
    <fullName>isTTVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for conditional display in the Mosaic Direct portal in Track and Trace report.</description>
    <label>Is Visible in Track and Trace</label>
    <type>Checkbox</type>
</CustomField>