force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_ConfirmationStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ConfirmationStatus__c</fullName>
    <description>Picking or put away status.</description>
    <label>Confirmation Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>