force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_CurrentLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CurrentLocation__c</fullName>
    <description>This field captures the current Current Location.</description>
    <label>Current Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>