force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_CustomerAgreedPriceFPD__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomerAgreedPriceFPD__c</fullName>
    <description>This field captures the customer Price (FPD).</description>
    <label>Customer Agreed Price (FPD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>