force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_DeliveryItemID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryItemID__c</fullName>
    <description>This field captures the delivery Item ID.</description>
    <externalId>true</externalId>
    <label>SAP Delivery Item ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>