force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_DeliveryLineStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryLineStatus__c</fullName>
    <description>This field is to capture the status of the Line Item</description>
    <label>Delivery Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Shipped</fullName>
            </value>
            <value>
                <fullName>Partially Shipped</fullName>
            </value>
            <value>
                <fullName>Completely Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>