force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryStatus__c</fullName>
    <description>This field captures the delivery Delivery  Status.</description>
    <label>Delivery Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Shipped</fullName>
            </value>
            <value>
                <fullName>Partially Shipped</fullName>
            </value>
            <value>
                <fullName>Completely Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>Picked</fullName>
                <isActive>false</isActive>
                <label>Picked</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <isActive>false</isActive>
                <label>Shipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>