force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_Destination__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Items</relationshipLabel>
    <relationshipName>Delivery_Items</relationshipName>
    <type>Lookup</type>
</CustomField>