force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_ETA__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ETA__c</fullName>
    <description>Estimated Time of Arrival date</description>
    <label>ETA</label>
    <type>Date</type>
</CustomField>