force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_GoodsIssueStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_GoodsIssueStatusDescription__c</fullName>
    <description>This field captures the status code description of goods issues</description>
    <label>Goods Issue Status Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not yet processed</fullName>
            </value>
            <value>
                <fullName>Partially Processed</fullName>
            </value>
            <value>
                <fullName>Completely Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>