force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_LinePONumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LinePONumber__c</fullName>
    <formula>PMC_CPQ_OrderProduct__r.PMC_CPQ_LinePONumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Purchase Order #</label>
    <type>Text</type>
</CustomField>