force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_ModeofTransportation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
    <inlineHelpText>Select the appropriate mode from the available options to track and manage logistics effectively</inlineHelpText>
    <label>MOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_MoT</valueSetName>
    </valueSet>
</CustomField>