force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the order Order Item.</description>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Delivery Items</relationshipLabel>
    <relationshipName>Delivery_Items</relationshipName>
    <type>Lookup</type>
</CustomField>