force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the owner of this record.</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PMC_CPQ_DeliveryItems</relationshipName>
    <type>Lookup</type>
</CustomField>