force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_ProductLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Location</label>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>Delivery Lines</relationshipLabel>
    <relationshipName>Delivery_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>