force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_RailCarNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RailCarNumber__c</fullName>
    <description>This field captures the rail Number IntelliTrans.</description>
    <label>Rail Road</label>
    <length>255</length>
    <type>Text</type>
</CustomField>