force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_SAPDeliveryID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
    <description>This field captures the sap Delivery ID.</description>
    <label>SAP Delivery ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>