force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_SAPOrderID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderID__c</fullName>
    <description>This field captures the sap Order ID.</description>
    <label>SAP Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>