force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_SAPOrderlineID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderlineID__c</fullName>
    <description>This field captures the sap line ID.</description>
    <label>SAP Order line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>