force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_UnitOfWeight__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UnitOfWeight__c</fullName>
    <label>Unit Of Weight</label>
    <length>32</length>
    <type>Text</type>
</CustomField>