force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_VehicleID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_VehicleID__c</fullName>
    <description>This field captures the vehicle Vehicle ID.</description>
    <label>Vehicle ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>