force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_VesselID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_VesselID__c</fullName>
    <description>This field captures the vessel Vessel ID.</description>
    <label>Vessel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>