force-app/main/default/objects/ShipmentItem/fields/PMC_CPQ_Weight__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Weight__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>