force-app/main/default/objects/ShipmentItem/fields/PMC_SS_DeliveryplannedPGIdate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DeliveryplannedPGIdate__c</fullName>
    <formula>Shipment.PMC_CPQ_DeliveryPlannedGIDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Planned PGI Date</label>
    <type>Date</type>
</CustomField>