force-app/main/default/objects/ShipmentItem/fields/PMC_SS_QuantityAccountsUoM__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
    <description>Field to specify quantity in account&apos;s UOM</description>
    <formula>IF(  AND( 
         OR(Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
            Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
            TEXT( PMC_CPQ_UnitofMeasure__c ) ==  Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name ), 
     PMC_CPQ_DeliveryQuantity__c , 
     IF( AND(TEXT( PMC_CPQ_UnitofMeasure__c ) = &apos;MTN&apos;, Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
         PMC_CPQ_DeliveryQuantity__c  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
         IF( AND(TEXT( PMC_CPQ_UnitofMeasure__c ) = &apos;STN&apos;, Shipment.PMC_CPQ_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
             PMC_CPQ_DeliveryQuantity__c * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
             0) ) )</formula>
    <label>Quantity (Account’s UoM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>