force-app/main/default/objects/ShipmentItem/recordTypes/PMC_CPQ_Default.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>