force-app/main/default/objects/ShipmentItem/recordTypes/PMC_CPQ_Rail.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_Rail</fullName>
    <active>false</active>
    <label>Rail</label>
</RecordType>