force-app/main/default/objects/ShipmentItem/validationRules/Restrict_Deliveryitem_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Deliveryitem_Quantity</fullName>
    <active>false</active>
    <description>Restriction to Edit the Quantity after Completely Shipped</description>
    <errorConditionFormula>ISCHANGED(Quantity)  &amp;&amp;  
(ISPICKVAL(Shipment.PMC_CPQ_DeliveryStatus__c, &apos;Completely Shipped&apos;))</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>You cannot update the quantity field when the Delivery Status
is Completely Shipped</errorMessage>
</ValidationRule>